log
Sun 16 Oct 2022 08:44:08 PM UTC: 
 tests:  0|4
total_score: 0/70
f60e1ba
Sun 16 Oct 2022 10:30:56 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
bd0dee6
Sun 16 Oct 2022 10:41:25 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
59efeab
Sun 16 Oct 2022 10:41:34 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cb57243
Sun 16 Oct 2022 11:04:28 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c:24:1: error: expected identifier or ‘(’ before ‘}’ token
   24 | }
      | ^
Compilation failed
30a7cf8
Sun 16 Oct 2022 11:04:36 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|2
total_score: 20/70
868727e
Sun 16 Oct 2022 11:20:55 PM UTC: 
 heap.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:40: error: ‘s’ undeclared (first use in this function)
   22 |    return (void*)pq->heapArray[0].data;s
      |                                        ^
heap.c:22:40: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:41: error: expected ‘;’ before ‘}’ token
   22 |    return (void*)pq->heapArray[0].data;s
      |                                         ^
      |                                         ;
   23 | }
      | ~                                        
Compilation failed
e2708fb
